deploy: 93616a4c2b1c2898dd466e9b7abd0b5a790a3faa

--- a/content/content.html
+++ b/content/content.html
@@ -5,10 +5,22 @@
 <p>Home page for the @discordia Discord bot framework</p>
 </blockquote>
 <p>Navigate this site using the options in the top bar.</p>
+<h2 id="readme"><a href="readme">Readme</a></h2>
+<hr />
+<p>The README.md file for the <a href="https://github.com/mfasman95/discordia"><code>@discordia</code> monorepo</a>.</p>
+<h2 id="getting-started"><a href="gs_setup">Getting Started</a></h2>
+<hr />
+<p>A series of guides to walk you through setting up a project.</p>
+<h2 id="packages">Packages</h2>
+<hr />
+<p>The README.md file for each package in the <code>@discordia</code> monorepo.</p>
 <ul>
-<li>Readme - The README.md file located at the <a href="https://github.com/mfasman95/discordia">repository root</a> for the <code>@discordia</code> monorepo</li>
-<li>Getting Started - A series of guides to walk you through</li>
-<li>Packages - The README.md file for each package in the <code>@discordia</code> monorepo</li>
-<li>@ API - A link to the detailed API documentation</li>
+<li><a href="action">@discordia/action</a></li>
+<li><a href="debug">@discordia/debug</a></li>
+<li><a href="default-help">@discordia/default-help</a></li>
+<li><a href="framework">@discordia/framework</a></li>
 </ul>
+<h2 id="api"><a href="api">API</a></h2>
+<hr />
+<p>Detailed API documentation.</p>
 </body></html>
