--- a/content/gs_write_an_action.html
+++ b/content/gs_write_an_action.html
@@ -64,14 +64,14 @@ const pingAction = new DiscordiaAction('ping', 'pong', 'ping -&gt; pong');
 const arrayAccessorAction = new DiscordiaAction(['oof', 'ow', 'ouch'], 'rekt', 'Lets you know when you\'ve been rekt.');
 
 // ADD A NEW ACTION //
-const functionAccessor = (userAction, msg, framework) =&gt; {
-  if (msg.content.includes('hot')) {
+const functionAccessor = (msgContent, msg, framework) =&gt; {
+  if (msgContent.includes('hot')) {
     return true;
-  } else if (msg.content.includes('heat')) {
+  } else if (msgContent.includes('heat')) {
     return true;
-  } else if (msg.content.includes('fire')) {
+  } else if (msgContent.includes('fire')) {
     return true;
-  } else if (msg.content.includes('flame')) {
+  } else if (msgContent.includes('flame')) {
     return true;
   }
   return false;
@@ -103,14 +103,14 @@ const DiscordiaAction = require('@discordia/action');
 
 const pingAction = new DiscordiaAction('ping', 'pong', 'ping -&gt; pong');
 const arrayAccessorAction = new DiscordiaAction(['oof', 'ow', 'ouch'], 'rekt', 'Lets you know when you\'ve been rekt.');
-const functionAccessor = (userAction, msg, framework) =&gt; {
-  if (msg.content.includes('hot')) {
+const functionAccessor = (msgContent, msg, framework) =&gt; {
+  if (msgContent.includes('hot')) {
     return true;
-  } else if (msg.content.includes('heat')) {
+  } else if (msgContent.includes('heat')) {
     return true;
-  } else if (msg.content.includes('fire')) {
+  } else if (msgContent.includes('fire')) {
     return true;
-  } else if (msg.content.includes('flame')) {
+  } else if (msgContent.includes('flame')) {
     return true;
   }
   return false;
@@ -119,7 +119,7 @@ const functionAccessorAction = new DiscordiaAction(functionAccessor, '🔥', 'Le
 
 // ADD A NEW ACTION - Try implementing your own generateJoke function, maybe calling a joke API //
 const generateJoke = () =&gt; 'This should probably make a user laugh';
-const functionResponse = (userArgs, msg, framework) =&gt; {
+const functionResponse = (msgContent, msg, framework, userArgs) =&gt; {
   return `here is a joke for ${msg.author.username}: ${generateJoke()}`;
 };
 const jokeAction = new DiscordiaAction('joke', functionResponse, 'Responds to the user with a funny joke');
