--- a/content/framework.html
+++ b/content/framework.html
@@ -1,7 +1,7 @@
 
 <html><head></head><body><ul>
 <li><a href="#installation">Installation</a></li>
-<li><a href="#basic-example">Basic Example</a></li>
+<li><a href="#kitchen-sink-example">Kitchen Sink Example</a></li>
 <li><a href="#usage">Usage</a><ul>
 <li><a href="#token">Token</a></li>
 <li><a href="#actions">Actions</a></li>
@@ -21,7 +21,7 @@ npm install @discordia/framework
 
 # install the module using yarn
 yarn add @discordia/framework</code></pre>
-<h1 id="basic-example">Basic Example</h1>
+<h1 id="kitchen-sink-example">Kitchen Sink Example</h1>
 <hr />
 <pre><code class="js">const DiscordiaFramework = require('@discordia/framework');
 // actions is an array of DiscordiaAction objects
@@ -47,14 +47,14 @@ myBot.start();</code></pre>
 </blockquote>
 <p>Your private Discord bot token. The token for your bot should be located at <a href="https://discordapp.com/developers/applications/%7Bclient-id%7D/bot">https://discordapp.com/developers/applications/{client-id}/bot</a> (replace {client-id} with the Client ID of your Discord application) in a hidden field that you can reveal by clicking "Click to Reveal Token". <a href="https://www.digitaltrends.com/gaming/how-to-make-a-discord-bot/">This guide</a> is a useful one for making a new Discord bot if you have not done so before. Follow that guide through step #4 to make your bot and get a link to invite it to a server.</p>
 <blockquote>
-<p>⚠️This token is a sensitive piece of information - do not commit it with your source code and regenerate it if it ever becomes compromised⚠️</p>
+<p>⚠️This token is a sensitive piece of information. DO NOT commit it with your source code. Regenerate it if it ever becomes compromised.⚠️</p>
 </blockquote>
 <h2 id="actions">Actions</h2>
 <hr />
 <blockquote>
 <p>Array[DiscordiaAction]</p>
 </blockquote>
-<p>An array of <a href="api#DiscordiaAction">DiscordiaAction</a> objects. See <a href="create_an_action">our guide</a> on how to use the <a href="https://github.com/mfasman95/discordia/tree/master/packages/action">@discordia/action</a> module to create your own actions and/or install them from third party modules.</p>
+<p>An array of <a href="api#DiscordiaAction">DiscordiaAction</a> objects. See <a href="gs_write_an_action">our guide</a> on how to use the <a href="https://github.com/mfasman95/discordia/tree/master/packages/action">@discordia/action</a> module to create your own actions. You can also install them from third party modules.</p>
 <h2 id="options">Options</h2>
 <hr />
 <blockquote>
@@ -81,14 +81,12 @@ myBot.start();</code></pre>
 <blockquote>
 <p>String|Function - Default = "The command you typed is not available 🙁"</p>
 </blockquote>
-<p>See <a href="api#DiscordiaAction.handleMissingCommand">DiscordiaFramework.handleMissingCommand</a> for more details.</p>
 <p>The message to send if a server member tries to ask the bot to do an action it does not know how to handle. You can either customize the <code>string</code> or provide a <code>function</code> to give a more involved response.</p>
 <p><strong>help</strong></p>
 <blockquote>
 <p>String|Function - Default = <a href="https://github.com/mfasman95/discordia/tree/master/packages/default-help">@discordia/default-help</a></p>
 </blockquote>
-<p>See <a href="api#DiscordiaAction.handleHelp">DiscordiaFramework.handleHelp</a> for more details.</p>
-<p>The message to send if a server member tries to ask the bot for help. By default it will use <a href="https://github.com/mfasman95/discordia/tree/master/packages/default-help">@discordia/default-help</a> to read your actions and send a response based on their <a href="create_an_action#accessor">accessors</a> and <a href="create_an_action#description">descriptions</a>. You can provide a static <code>string</code> as a response or provide a custom <code>function</code> to give a more involved response.</p>
+<p>The message to send if a server member tries to ask the bot for help. By default it will use <a href="https://github.com/mfasman95/discordia/tree/master/packages/default-help">@discordia/default-help</a> to read your actions and send a response based on their <a href="action#accessor">accessors</a> and <a href="action#description">descriptions</a>. You can provide <code>null</code> to disable the help message or provide a custom <a href="api#DiscordiaAction">DiscordiaAction</a> to control what the message responds to and what it says.</p>
 <h1 id="testing">Testing</h1>
 <hr />
 <p>🚧 Coming Soon! 🚧</p>
