--- a/content/framework.html
+++ b/content/framework.html
@@ -45,7 +45,7 @@ myBot.start();</code></pre>
 <blockquote>
 <p>String</p>
 </blockquote>
-<p>Your private Discord bot token. The token for your bot should be located at <a href="https://discordapp.com/developers/applications/%7Bclient-id%7D/bot">https://discordapp.com/developers/applications/{client-id}/bot</a> (replace {client-id} with the Client ID of your Discord application) in a hidden field that you can reveal by clicking "Click to Reveal Token". <a href="https://www.digitaltrends.com/gaming/how-to-make-a-discord-bot/">This guide</a> is a useful one for making a new Discord bot if you have not done so before. Follow that guide through step #4 to make your bot and get a link to invite it to a server.</p>
+<p>Your private Discord bot token. The token for your bot should be located at <a href="https://discordapp.com/developers/applications/%7Bclient-id%7D/bot">https://discordapp.com/developers/applications/{client-id}/bot</a> (replace {client-id} with the Client ID of your Discord application) in a hidden field that you can reveal by clicking "Click to Reveal Token". <a href="gs_setup_your_bot">This guide</a> will help you make a new Discord bot if you have not done so before.</p>
 <blockquote>
 <p>⚠️This token is a sensitive piece of information. DO NOT commit it with your source code. Regenerate it if it ever becomes compromised.⚠️</p>
 </blockquote>
