--- a/content/gs_setup_your_workspace.html
+++ b/content/gs_setup_your_workspace.html
@@ -1,13 +1,13 @@
 
-<html><head></head><body><h1 id="--disclaimer--">⚠️Disclaimer⚠️</h1>
+<html><head></head><body><h1 id="previous">Previous</h1>
+<hr />
+<p>You should have gotten to this page after completing <a href="gs_setup_your_bot">Getting Started - Setup Your Bot</a>.</p>
+<h1 id="--disclaimer--">⚠️Disclaimer⚠️</h1>
 <hr />
 <p>These getting started guides assume you are using a Mac or Linux computer with a standard <code>bash</code> or <code>zsh</code> terminal. Some of the commands included in this guide (e.g. <code>touch</code> to make new files) might not work if you are developing on Windows. If you get to a step where you need to run code in a command line and it fails there is a chance that this is the reason.</p>
-<h1 id="get-your-bot-token-and-invite-it-to-your-server">Get Your Bot Token And Invite It To Your Server</h1>
-<hr />
-<p>The first step to creating a Discord bot begins before you even start your own Node project - you must go through the Discord developer site, set up a new application, give that application a bot, and add it to your server. Following <a href="https://www.digitaltrends.com/gaming/how-to-make-a-discord-bot/">this guide</a> (steps 2 through 4) will walk you through that process in more detail.</p>
 <h1 id="setup-node">Setup Node</h1>
 <hr />
-<p>When setting up Node you have two main options. Either way, make sure that by the end of this section you can run <code>node --version</code> and <code>npm --version</code> in your terminal and get back a <a href="https://docs.npmjs.com/about-semantic-versioning">semantic version</a> back.</p>
+<p>When setting up Node you have two main options. Either way, make sure that by the end of this section you can run <code>node --version</code> and <code>npm --version</code> in your terminal and get back a <a href="https://docs.npmjs.com/about-semantic-versioning">semantic version</a>.</p>
 <h3 id="install-node">Install Node</h3>
 <p>This is the easiest option, but not the recommended one. Just go to the <a href="https://nodejs.org/en/download/">Node.JS website's download section</a> and click the button for your Operating System.</p>
 <h3 id="use-a-version-manager">Use a Version Manager</h3>
