--- a/content/gs_start_your_bot.html
+++ b/content/gs_start_your_bot.html
@@ -1,8 +1,8 @@
 
 <html><head></head><body><h1 id="previous">Previous</h1>
 <hr />
-<p>You should have gotten to this page after completing <a href="gs_setup">Getting Started - Setup</a>.</p>
-<h1 id="setting-up-your-bot">Setting Up Your Bot</h1>
+<p>You should have gotten to this page after completing <a href="gs_setup_your_workspace">Getting Started - Setup Your Workspace</a>.</p>
+<h1 id="starting-your-bot">Starting Your Bot</h1>
 <hr />
 <p>Open up <code>src/index.js</code> in your code editor of choice and add the following code.</p>
 <pre><code class="js">// src/index.js //
@@ -30,7 +30,12 @@ npm start</code></pre>
 <li><code>@BotName h</code> or <code>@BotName help</code> should display a help message</li>
 <li><code>@BotName action</code> should display a missing action message</li>
 </ul>
-<p>TODO: INSERT IMAGE HERE SHOWING MESSAGE EXAMPLES</p>
+<div style="width: 100%">
+  <img src="img/gs_start_your_bot/first_test.png" style="margin: auto; display: block; max-width: 100%;">
+</div>
+
+<br>
+
 <pre><code class="bash"># Stop your bot
 ctrl + c</code></pre>
 <h1 id="next">Next</h1>
