--- a/content/gs_write_an_action.html
+++ b/content/gs_write_an_action.html
@@ -23,7 +23,12 @@ npm start</code></pre>
 <li><code>@BotName h</code> or <code>@BotName help</code> should display a help message that describes how to use <code>ping</code></li>
 <li><code>@BotName ping</code> should reply with <code>pong</code></li>
 </ul>
-<p>TODO: INSERT IMAGE HERE SHOWING MESSAGE EXAMPLES</p>
+<div style="width: 100%">
+  <img src="img/gs_write_an_action/ping_test.png" style="margin: auto; display: block; max-width: 100%;">
+</div>
+
+<br>
+
 <pre><code class="bash"># Stop your bot
 ctrl + c</code></pre>
 <h1 id="write-an-action-with-an-array-of-accessors">Write An Action with an Array of Accessors</h1>
@@ -51,7 +56,12 @@ npm start</code></pre>
 <li><code>@BotName ow</code> should reply with <code>rekt</code></li>
 <li><code>@BotName ouch</code> should reply with <code>rekt</code></li>
 </ul>
-<p>TODO: INSERT IMAGE HERE SHOWING MESSAGE EXAMPLES</p>
+<div style="width: 100%">
+  <img src="img/gs_write_an_action/array_accessor_test.png" style="margin: auto; display: block; max-width: 100%;">
+</div>
+
+<br>
+
 <pre><code class="bash"># Stop your bot
 ctrl + c</code></pre>
 <h1 id="write-an-action-with-a-function-accessor">Write An Action with a Function Accessor</h1>
@@ -92,7 +102,12 @@ npm start</code></pre>
 <li><code>@BotName do you like lighting things on fire?</code> should reply with <code>🔥</code></li>
 <li><code>@BotName roasting marshmallows on an open flame</code> should reply with <code>🔥</code></li>
 </ul>
-<p>TODO: INSERT IMAGE HERE SHOWING MESSAGE EXAMPLES</p>
+<div style="width: 100%">
+  <img src="img/gs_write_an_action/function_accessor_test.png" style="margin: auto; display: block; max-width: 100%;">
+</div>
+
+<br>
+
 <pre><code class="bash"># Stop your bot
 ctrl + c</code></pre>
 <h1 id="write-an-action-with-a-function-response">Write An Action with a Function Response</h1>
@@ -136,7 +151,12 @@ npm start</code></pre>
 <li><code>@BotName h</code> or <code>@BotName help</code> should display a help message that describes how to use all the actions you've created</li>
 <li><code>@BotName joke</code> should reply with a message that includes my username and a generated joke</li>
 </ul>
-<p>TODO: INSERT IMAGE HERE SHOWING MESSAGE EXAMPLES</p>
+<div style="width: 100%">
+  <img src="img/gs_write_an_action/function_response_test.png" style="margin: auto; display: block; max-width: 100%;">
+</div>
+
+<br>
+
 <pre><code class="bash"># Stop your bot
 ctrl + c</code></pre>
 <h1 id="optional---write-your-own-action">Optional - Write Your Own Action</h1>
