--- a/content/home.html
+++ b/content/home.html
@@ -8,7 +8,7 @@
 <h2 id="readme"><a href="readme">Readme</a></h2>
 <hr />
 <p>The README.md file for the <a href="https://github.com/mfasman95/discordia"><code>@discordia</code> monorepo</a>.</p>
-<h2 id="getting-started"><a href="gs_setup">Getting Started</a></h2>
+<h2 id="getting-started"><a href="gs_setup_your_bot">Getting Started</a></h2>
 <hr />
 <p>A series of guides to walk you through setting up a project.</p>
 <h2 id="packages">Packages</h2>
