--- a/gs_setup_your_bot/index.html
+++ b/gs_setup_your_bot/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="refresh" content="0; url=../" />
         <script>
-            sessionStorage.setItem('redirectPath', 'gs_setup/' + window.location.hash);
+            sessionStorage.setItem('redirectPath', 'gs_setup_your_bot/' + window.location.hash);
         </script>
     </head>
 </html>
