--- a/content/framework.html
+++ b/content/framework.html
@@ -1,5 +1,17 @@
 
-<html><head></head><body><ul>
+<html><head></head><body><blockquote>
+<p>Note: Some of the links in this README file work better on the <a href="https://mfasman95.github.io/discordia/framework">documentation site</a></p>
+</blockquote>
+<p align="center">
+  <a href="https://www.npmjs.com/package/@discordia/framework">
+    <img alt="@discordia/framework" src="https://img.shields.io/npm/v/@discordia/framework?label=%40discordia%2Fframework" style="max-width: 100%;">
+  </a>
+  <a href="https://www.npmjs.com/package/@discordia/framework">
+    <img alt="@discordia/framework" src="https://img.shields.io/npm/dw/@discordia/framework" style="max-width: 100%;">
+  </a>
+</p>
+
+<ul>
 <li><a href="#installation">Installation</a></li>
 <li><a href="#kitchen-sink-example">Kitchen Sink Example</a></li>
 <li><a href="#usage">Usage</a><ul>
@@ -10,12 +22,8 @@
 </li>
 <li><a href="#testing">Testing</a></li>
 </ul>
-<blockquote>
-<p>Note: Some of the links in this README file work better on the <a href="https://mfasman95.github.io/discordia/">documentation site</a></p>
-</blockquote>
 <h1 id="installation">Installation</h1>
 <hr />
-<p>Discordia instantiates and starts Discord bots using the <a href="https://github.com/mfasman95/discordia/tree/master/packages/framework">@discordia/framework</a> module.</p>
 <pre><code class="bash"># install the module using npm
 npm install @discordia/framework
 
