--- a/content/debug.html
+++ b/content/debug.html
@@ -1,11 +1,16 @@
 
-<html><head></head><body><ul>
-<li><a href="#installation">Installation</a></li>
-<li><a href="#usage">Usage</a></li>
-</ul>
-<blockquote>
-<p>Note: Some of the links in this README file work better on the <a href="https://mfasman95.github.io/discordia/">documentation site</a></p>
+<html><head></head><body><blockquote>
+<p>Note: Some of the links in this README file work better on the <a href="https://mfasman95.github.io/discordia/debug">documentation site</a></p>
 </blockquote>
+<p align="center">
+  <a href="https://www.npmjs.com/package/@discordia/debug">
+    <img alt="@discordia/debug" src="https://img.shields.io/npm/v/@discordia/debug?label=%40discordia%2Fdebug" style="max-width: 100%;">
+  </a>
+  <a href="https://www.npmjs.com/package/@discordia/debug">
+    <img alt="@discordia/debug" src="https://img.shields.io/npm/dw/@discordia/debug" style="max-width: 100%;">
+  </a>
+</p>
+
 <h1 id="installation">Installation</h1>
 <hr />
 <pre><code class="bash"># install the module using npm
@@ -13,7 +18,5 @@ npm install @discordia/debug
 
 # install the module using yarn
 yarn add @discordia/debug</code></pre>
-<h1 id="usage">Usage</h1>
-<hr />
-<p>🚧 Coming Soon! 🚧</p>
+<p>🚧 Under Construction 🚧</p>
 </body></html>
