--- a/content/readme.html
+++ b/content/readme.html
@@ -4,6 +4,41 @@
 <blockquote>
 <p>Monorepo for the @discordia Discord bot framework</p>
 </blockquote>
+<p align="center">
+  <a href="https://github.com/mfasman95/discordia/blob/master/LICENSE">
+    <img alt="license" src="https://img.shields.io/github/license/mfasman95/discordia" style="max-width: 100%;">
+  </a>
+</p>
+
 <p>See the <a href="https://mfasman95.github.io/discordia/">documentation site</a> for more info.</p>
-<p>🚧 Under Construction 🚧</p>
+<h2 id="packages">Packages</h2>
+<hr />
+<p align="center">
+  <a href="https://www.npmjs.com/package/@discordia/framework">
+    <img alt="@discordia/framework" src="https://img.shields.io/npm/v/@discordia/framework?label=%40discordia%2Fframework" style="max-width: 100%;">
+  </a>
+  <a href="https://www.npmjs.com/package/@discordia/action">
+    <img alt="@discordia/action" src="https://img.shields.io/npm/v/@discordia/action?label=%40discordia%2Faction" style="max-width: 100%;">
+  </a>
+  <a href="https://www.npmjs.com/package/@discordia/default-help">
+    <img alt="@discordia/default-help" src="https://img.shields.io/npm/v/@discordia/default-help?label=%40discordia%2Fdefault-help" style="max-width: 100%;">
+  </a>
+  <a href="https://www.npmjs.com/package/@discordia/debug">
+    <img alt="@discordia/debug" src="https://img.shields.io/npm/v/@discordia/debug?label=%40discordia%2Fdebug" style="max-width: 100%;">
+  </a>
+  <a href="https://www.npmjs.com/package/@discordia/complete">
+    <img alt="@discordia/complete" src="https://img.shields.io/npm/v/@discordia/complete?label=%40discordia%2Fcomplete" style="max-width: 100%;">
+  </a>
+</p>
+
+<h2 id="getting-started"><a href="https://mfasman95.github.io/discordia/gs_setup_your_bot">Getting Started</a></h2>
+<hr />
+<p>This guide will walk you through creating a bot from the <a href="http://discordapp.com/developers/">Discord developers site</a> as well as setting up your workspace to develop an <code>@discordia</code> bot with Node and NPM, and then finally how to use the <a href="https://mfasman95.github.io/discordia/framework">@discordia/framework</a> and <a href="https://mfasman95.github.io/discordia/action">@discordia/action</a> modules.</p>
+<h2 id="contributing">Contributing</h2>
+<hr />
+<p>This project uses <a href="https://www.conventionalcommits.org/en/v1.0.0/">Conventional Commits</a>. After you make your changes and update the appropriate tests, do the following steps:</p>
+<p>1) <code>npm test</code> - You can also use <code>npm run test:watch</code> to validate in a watch loop
+2) <code>npm run lint</code> - Your changes will be linted when they are staged, but this will help you catch those changes earlier
+3) <code>git add ...</code> - Stage the changes you want to commit
+4) <code>npm run commit</code> - This command will walk you through making a conventional commit</p>
 </body></html>
